ajeitando as pags com o leo

--- a/index.html
+++ b/index.html
@@ -5,57 +5,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/img/globe-americas.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/BlogStackx/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:ital,wght@0,200;0,500;0,600;1,300;1,400&display=swap" rel="stylesheet">
+    <script src="js/script.js" defer></script>
     <title>World Tech</title>
 </head>
 <body>
     
     <header>
              <div class="center">
-                <div class="logo"><img src="/img/PpDovLFNlogoo.png" alt=""></div>
+                <div class="logo"><img src="/BlogStackx/img/PpDovLFNlogoo.png" alt=""></div>
                 <nav class="menu">
-                        <a href="index.html">Home</a>
-                        <a href="index.html">Tecnologias</a>
-                        <a href="sobre">Games</a>
-                        <a href="inovacoes">Inovações</a>
+                        <a href="#" data_all_category>todas</a>
+                        <a href="#" data_technology_category>Tecnologias</a>
+                        <a href="#" data_ia_category>IA</a>
+                        <a href="#" data_inovation_category>Inovações</a>
+                        <a href="#" data_games_category>Games</a>
+
                     </ul>
                 </nav>
              </div> 
     </header>
     <main class="cards" id="post-content">
-        <section class="card">
+        <section class="card" data_cards data_card1  data_card="technology">
             <div class="icon">
-                <img src="/img/GIy-0yOi.png_small" alt="Saiba mais">
+                <img src="/BlogStackx/img/NuHeu8ho.png_small" alt="Saiba mais">
+                <span data_date>data</span>
+                <span>visualização:<span data_views_card1>0</span></span>
             </div>
             <h1>Cameras e lentes</h1>
-            <h3>lorem sdgfsdgfdgf</h3>
-            <a href="/pages/front1/index-front1.html"><i><button>Saiba mais</button></i></a>
+            <h3>lorem</h3>
+            <a href="#"><i><button>Saiba mais</button></i></a>
         </section>
-        <section class="card">
+        <section class="card" data_cards data_card2 data_card="inovation">
             <div class="icon">
-                <img src="/img/Vntg3qeX.png_small" alt="Saiba mais">
+                <img src="/BlogStackx/img/Vntg3qeX.png_small" alt="Saiba mais">
+                <span data_date>data</span>
+                <span>visualização:<span data_views_card2>0
+                </span></span>
             </div>
             <h1>telescópio James Webb</h1>
             <h3>lorem fwsfgsgsfg </h3>
-            <a href="/pages/front2/index-front2.html"><i><button>Saiba mais</button></i></a>
+            <a href="#"><i><button>Saiba mais</button></i></a>
 
         </section>
-        <section class="card" id="card2">
+        <section class="card" id="card2" data_cards data_card3 data_card="ia">
             <div class="icon">
-                <img src="/img/Cka_58bX.png_small" alt="Saiba mais">
+                <img src="/BlogStackx/img/Cka_58bX.png_small" alt="Saiba mais">
+                <span data_date>data</span>
+                <span class="span">visualização:<span data_views_card3>0
+                </span></span>
             </div>
             <h1>AI - Qual o limite?</h1>
             <h3>lorem</h3>
-            <a href="/pages/front3/index-front3.html"><i><button>Saiba mais</button></i></a>
+            <a href="#"><i><button>Saiba mais</button></i></a>
         </section>
-        <section class="card">
+        <section class="card" data_cards data_card4 data_card="games">
             <div class="icon">
-                <img src="/img/Cka_58bX.png_small" alt="Saiba mais">
+                <img src="/BlogStackx/img/Vntg3qeX.png_small" alt="Saiba mais">
+                <span data_date>data</span>
+                <span>visualização:<span data_views_card4>0
+                </span></span>
             </div>
-            <h1>Internet das coisas</h1>
+            <h1>Nova placa de video</h1>
             <h3>lorem afdsdfsdf</h3>
-            <a href="/pages/front3/index-front3.html"><i><button>Saiba mais</button></i></a>
+            <a href="#"><i><button>Saiba mais</button></i></a>
         </section>
     </main>
     <footer id="rodape">
