--- a/pags/front4/index-front4.html
+++ b/pags/front4/index-front4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/pages/front4/front4.style.css">
+    <link rel="stylesheet" href="/BlogStackx/pags/front4/index-front4.html">
     <title>Internet das coisas</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
             <div class="icon">
                 <img src="/img/Cka_58bX.png_small" alt="Saiba mais">
             </div>
-            <h1>Internet das coisas</h1>
+            <h1>placa de video</h1>
             <h3>lorem afdsdfsdf</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id placeat quo fugiat ipsa nisi, maxime impedit porro vitae saepe accusantium recusandae tempore quos enim dolorem sequi. Repellat corrupti aperiam voluptas!</p>
         </section>
