--- a/postpage.html
+++ b/postpage.html
@@ -13,8 +13,8 @@
     <section>
         <div class="icon">
             <img src="" alt="imagem sugestiva" data_img>
-            <span data_date>data</span>
-            <span>visualização:<span data_views>0</span></span>
+            <span data_date>Data:</span>
+            <span>Visualizações:<span data_views>0</span></span>
         </div>
         <h1 data_tittle>titulo</h1>
         <p data_text>lorem</p>
