--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/BlogStackx/css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
+    <link rel="shortcut icon" href="/BlogStackx/img/icons8-dev-16.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:ital,wght@0,200;0,500;0,600;1,300;1,400&display=swap" rel="stylesheet">
     <script src="js/script.js" defer></script>
     <title>World </> Tech</title>
@@ -36,18 +36,18 @@
 
             <div class="card" data_cards data_card1  data_card="technology">
                 <div class="card-image car-1"></div>
-                    <span class="data" data_date>data</span>
+                    <span class="data" data_date>Data:</span>
                     <span class="spann">visualização:<span data_views_card1>0</span></span>
                     <h3>Cameras e Lentes</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetubis, voluptate aperiam.</p>
+                    <p>Lé um instrumento óptico para captação de imagens na forma de fotografias individuais, que são armazenadas localmente, transmitidas para outro local, ou ambos.</p>
             </div>
 
             <div class="card" data_cards data_card2 data_card="inovation">
                 <div class="card-image car-2"></div>
                     <span class="data"  data_date>data</span>
                     <span class="spann">visualização:<span data_views_card2>0</span></span>
-                    <h3>telescópio James Webb</h3>
-                    <p>lorem fwsfgsgsfg </p>
+                    <h3>Telescópio Espacial James Webb</h3>
+                    <p>A missão primária do JWST é a de examinar a radiação infravermelha</p>
             </div>
 
             <div class="card" id="card2" data_cards data_card3 data_card="ia">
@@ -55,7 +55,7 @@
                     <span class="data" data_date>data</span>
                     <span class="spann">visualização:<span data_views_card3>0</span></span>
                     <h3>AI - Qual o limite?</h3>
-                    <p>lorem</p>
+                    <p>Inteligência artificial (de sigla: IA; do inglês: Artificial Intelligence, de sigla: AI)</p>
             </div>
 
             <div class="card" data_cards data_card4 data_card="games">
@@ -63,7 +63,7 @@
                     <span class="data" data_date>data</span>
                     <span class="spann">Visualizações:<span data_views_card4>0</span></span>
                     <h3>Nova placa de video</h3>
-                    <p>lorem afdsdfsdf</p>
+                    <p>A série GeForce 40 é uma família de unidades de processamento gráfico</p>
             </div>
         </section>  
 
@@ -77,13 +77,13 @@
                 <p>The Future is Now.</p>
 
                 <div id="footer-social-media">
-                    <a href="#" class="footer-link" id="instagram">
+                    <a href="https://www.instagram.com/gabeshds/" class="footer-link" id="instagram">
                         <i class="fa-brands fa-instagram" style="color: #be27b9;"></i>
                     </a>
-                    <a href="#" class="footer-link" id="github">
+                    <a href="https://github.com/GabrielHSK" class="footer-link" id="github">
                         <i class="fa-brands fa-square-github" style="color: #f5f5f5;"></i>
                     </a>
-                    <a href="#" class="footer-link" id="linkedin">
+                    <a href="https://www.linkedin.com/in/gabrielhenriquehsk/" class="footer-link" id="linkedin">
                         <i class="fa-brands fa-linkedin" style="color: #0052e0;"></i>
                     </a>
                     <a href="#" class="footer-link" id="whatsapp">
